# desafio_br_med

./:  app.json  Procfile  README.md  pyproject.toml  requirements.txt
cotacoes/cotacoes/: asgi.py  settings.py  urls.py  wsgi.py
cotacoes/cotacoes_app/: __init__.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
cotacoes/cotacoes_app/migrations/: 0001_initial.py  0002_alter_cotacao_modea_base.py  0003_auto_20211121_2216.py  0004_auto_20211121_2311.py  0005_auto_20211121_2343.py
cotacoes/cotacoes_app/templates/cotacoes_app/: base.html  index.html
cotacoes/cotacoes_app/tests/: test_models.py
