[tool.poetry]
name = "Desafio do da BR MED"
version = "0.1.0"
description = ""
authors = ["Thales Evangelista <thales.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
