[tool.poetry]
name = "Desafio do da BR MED"
version = "0.1.0"
description = ""
authors = ["Thales Evangelista <thales.t@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
requests = "^2.26.0"
workalendar = "^16.1.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
